[gd_scene load_steps=11 format=2]

[ext_resource path="res://features/intro/scripts/main.gd" type="Script" id=1]
[ext_resource path="res://fonts/ubuntu-medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://features/sandbox/scenes/start_game.tscn" type="PackedScene" id=3]
[ext_resource path="res://features/sandbox/scenes/settings.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/ubuntu-bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=4]
size = 92
extra_spacing_top = 24
extra_spacing_bottom = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 18
extra_spacing_top = 8
extra_spacing_bottom = 8
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0.247059 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
next_scene = ExtResource( 3 )
settings_scene = ExtResource( 4 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 4 )
text = "Logo"
align = 1
valign = 1

[node name="padding" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0

[node name="menu" type="VBoxContainer" parent="padding"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -59.5
margin_bottom = 59.5

[node name="button_start" type="Button" parent="padding/menu"]
margin_right = 912.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 2 )

[node name="button_settings" type="Button" parent="padding/menu"]
margin_top = 41.0
margin_right = 912.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 2 )

[node name="button_quit" type="Button" parent="padding/menu"]
margin_top = 82.0
margin_right = 912.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 2 )

[connection signal="pressed" from="padding/menu/button_start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="padding/menu/button_settings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="padding/menu/button_quit" to="." method="_on_button_quit_pressed"]
